--- a/src/LBF/AdminBundle/Resources/views/Admin/emailCompleteAdmin.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/emailCompleteAdmin.html.twig
@@ -38,7 +38,7 @@
             <tr>
               <td bgcolor="rgba(100,100,100,0.8)" width="600" valign="top" style="border-bottom-width: 5px; border-bottom-style: solid; border-bottom-color: #4d5259;">
                 <a href="http://www.lebuffetfrances.com" target="_blank">
-                  <img src="{{ asset('img/system/email/email_header.png') }}" alt="Banière Le Buffet Francés" border="0" width="600" height="95" style="display:block; color: white; text-align:center;"/>
+                  <img src="http://www.lebuffetfrances.com/img/system/email/email_header.png" alt="Banière Le Buffet Francés" border="0" width="600" height="95" style="display:block; color: white; text-align:center;"/>
                 </a>
               </td>
             </tr>
