--- a/src/LBF/AdminBundle/Resources/views/Admin/emailConfirmClient.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/emailConfirmClient.html.twig
@@ -38,7 +38,7 @@
             <tr>
               <td bgcolor="rgba(100,100,100,0.8)" width="600" valign="top" style="border-bottom-width: 5px; border-bottom-style: solid; border-bottom-color: #4d5259;">
                 <a href="http://www.lebuffetfrances.com" target="_blank">
-                  <img src="{{ asset('img/system/email/email_header.png') }}" alt="Banière Le Buffet Francés" border="0" width="600" height="95" style="display:block; color: white; text-align:center;"/>
+                  <img src="http://www.lebuffetfrances.com/img/system/email/email_header.png" alt="Banière Le Buffet Francés" border="0" width="600" height="95" style="display:block; color: white; text-align:center;"/>
                 </a>
               </td>
             </tr>
@@ -280,7 +280,7 @@
                                 </div>
                                 <div style="display:inline-block;">
                                   <a href="https://www.facebook.com/pages/Epicerie-de-Cusco/928893590468462" style="position:relative; top:4px;">
-                                    <img src="{{ asset('img/system/email/fb.png')}}" alt="FB" border="0"  width="16" height="16" style="display:block; font-size:8px; color:white;">
+                                    <img src="http://www.lebuffetfrances.com/img/system/email/fb.png" alt="FB" border="0"  width="16" height="16" style="display:block; font-size:8px; color:white;">
                                   </a>
                                 </div>
                               </td>
