--- a/src/LBF/MainBundle/Resources/views/Main/order.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/order.html.twig
@@ -84,7 +84,7 @@
 				        			<li>
 				        				{{ 'cart.orderContent.conditions2' | trans }}
 				        				<br/>
-				        				<br/>
+				        				<br class="hidden-xs"/>
 				        				<div class="address_box">
 				        					<span style="font-size:1.2em;">
 					        					<strong>Le Buffet Francés</strong> 
@@ -99,7 +99,7 @@
 				        			</li>
 				        		</ol>
 		                    </div>
-			        		<br/>
+			        		<br class="hidden-xs"/>
 			        		<div class="row">
 				        		<form method="post" {{ form_enctype(formNewOrder) }}>
 				        		{% if form_errors(formNewOrder) %}
