--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -362,7 +362,7 @@ strong {
 #header {
 	position: fixed;
 	top: 0px;
-	z-index: 1;
+	z-index: 50 !important;
 	background-color: rgba(41,41,41,0.95); /*#222121*/
 	border-bottom: 1px solid rgba(250,250,250,0.6);
 	box-shadow: 0px 1px 3px 2px rgba(41,41,41,0.4);
