--- a/src/LBF/MainBundle/Resources/views/Main/order.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/order.html.twig
@@ -151,7 +151,7 @@
 					                		<img src="{{ asset('img/system/defaults/left_arrow.png') }}" alt="" class="btn_right_arrow"/>
 					                		{{ 'cart.actions.previous' | trans }}
 								        </a>
-								        <button type="submit" class="btn btn-login float-right">
+								        <button type="submit" class="btn btn-login float-right" id="submit_button_order">
 								            {{ 'ourProducts.actions.order' | trans }}
 								            <img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt="" class="btn_right_arrow"/>
 								        </button>
