--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -165,20 +165,30 @@ h4
 	}
 }
 
-h5 {
+h5
+{	
 	padding: 0;
 	margin: 0;
-	color: #922e2e;
-	font-weight: 800;
+	text-align: center;
 }
-@media (min-width: 901px) {
-	h5 {
-		font-size: 1.3em;
-	}
-}
-@media (max-width: 992px) {
+@media (min-width: 1401px) {
 	h5 {
 		font-size: 1.1em;
+	}
+}
+@media (min-width: 993px) and (max-width: 1400px){
+	h5 {
+		font-size: 1em;
+	}
+}
+@media (min-width: 479px) and (max-width: 992px) {
+	h5 {
+		font-size: 0.9em;
+	}
+}
+@media (max-width: 478px) {
+	h5 {
+		font-size: 0.8em;
 	}
 }
 
@@ -398,7 +408,6 @@ strong {
 .user_info_header {
 	overflow: hidden;
 	border-bottom: 1px solid transparent;
-	position: relative;
 }
 @media (min-width: 1401px) {
 	.user_img_header {
@@ -407,7 +416,6 @@ strong {
 	}
 	.user_info_header {
 		font-size: 0.8em;
-		top: -15px;
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
@@ -417,7 +425,6 @@ strong {
 	}
 	.user_info_header {
 		font-size: 0.8em;
-		top: -8px;
 	}
 }
 @media (max-width: 992px) {
@@ -427,7 +434,6 @@ strong {
 	}
 	.user_info_header {
 		font-size: 0.58em;
-		top: -5px;
 	}
 }
 .user_access_button:hover .user_info_header {
@@ -466,7 +472,7 @@ strong {
 @media (min-width: 993px) and (max-width: 1400px){
 	.btn-log {
 		padding: 4px 7px; 
-		font-size: 1em;
+		font-size: 0.8em;
 	}
 }
 @media (min-width: 479px) and (max-width: 993px){
@@ -947,7 +953,8 @@ strong {
 	}
 }
 .logo_header_sm_img {
-	width: 125px !important;
+	width: 34%;
+	max-width: 100px;
 	position: absolute;
 	top: 6px;
 	left: 6px;
@@ -1150,9 +1157,6 @@ a.captionOrange:hover
 	}
 }
 .nav-tabs li {
-	width: 23%;
-	margin-left: 1%;
-	margin-right: 1%;
 	background-color: transparent;
 	text-align: center;
 }
@@ -1263,9 +1267,15 @@ a.captionOrange:hover
 	margin-bottom: 20px;
 	margin-top: 20px;
 }
-/*.product_img:hover {
-	cursor: pointer;
-}*/
+.product_img_bis {
+	border-radius: 50%;
+	border: 1px solid rgba(41,41,41,0.5);
+	width: 100%;
+	padding: 0;
+	margin-bottom: 0px;
+	margin-top: 10px;	
+}
+
 .small_quote {
 	font-size: 0.7em;
 	font-style: italic;
@@ -1309,7 +1319,7 @@ a.captionOrange:hover
 	}
 }
 
-.add_buttons, .add_buttons_XS {
+.add_buttons, .add_buttons_XS, .add_buttons_spe {
 	margin: 0;
 	text-align: center;
 	font-size: 1.3em !important;
@@ -1381,12 +1391,53 @@ a.captionOrange:hover
 		height: 20px;
 	}
 }
+@media (min-width: 1401px) {
+	.add_buttons_spe {
+		width: 20px;
+		height: 20px;
+	}
+}
+@media (min-width: 993px) and (max-width: 1400px){
+	.add_buttons_spe {
+		width: 16px;
+		height: 16px;
+	}
+}
+@media (min-width: 479px) and (max-width: 992px) {
+	.add_buttons_spe {
+		width: 12px;
+		height: 12px;
+	}
+}
 .add_buttons_XS {
 	width: 30px !important;
 	height: 30px !important;
 	margin-left: 5px;
 	margin-right: 5px;
 	top: 8px !important;
+}
+.add_buttons_spe_XS {
+	width: 18px !important;
+	height: 18px !important;
+	margin-left: 3px;
+	margin-right: 3px;
+	top: 4px !important;
+}
+
+@media (min-width: 1401px) {
+	.info_spe {
+		font-size: 0.9em;
+	}
+}
+@media (min-width: 993px) and (max-width: 1400px){
+	.info_spe {
+		font-size: 0.85em;
+	}
+}
+@media (min-width: 479px) and (max-width: 992px) {
+	.info_spe {
+		font-size: 0.8em;
+	}
 }
 
 .counter_info_divs {
@@ -1438,6 +1489,13 @@ a.captionOrange:hover
 	background-color: transparent;
 	box-shadow: none;
 }
+
+.btn-add-to-cart-spe button {
+	top: 5px !important;
+	width: 26px !important;
+	height: 26px !important;
+}
+
 .btn-loading {
 	border: none;
 	background-color: transparent;
